--- a/클로져와스코프.md
+++ b/클로져와스코프.md
@@ -19,4 +19,12 @@
 1) 전역 스코프 (Global scope) : 스크립트 전체에서 참조 되는 것 (어느 곳에서든 참조 가능)
 
 2) 지역 스코프 (Local scope) : 정의된 함수 내에서만 참조되는 것 (지역 밖에서는 참조 되지 않음)
+1-2. 스코프 체인
 3) ![image](https://user-images.githubusercontent.com/83463918/162764120-87df1d4f-7c9c-43d7-ae7c-cc052f8a3e37.png)
+다음의 코드처럼 전역에도 지역에도 x 라는 변수가 있을때 함수는 어떤 값을 참조하는지 헷갈릴 때가 있다.
+
+ 
+
+현재 코드의 구조는 전역 안의 외부함수 안의 중첩함수의 형태로 이루어져 있다. 
+
+함수가 중첩이 되면 각각의 함수의 지역스코프 또한 중첩이 될 수 있는데, 이는 스코프가 함수의 중첩에 의해 계층적인 구조를 가질 수 있다는 것을 의미한다.
