--- a/클로져와스코프.md
+++ b/클로져와스코프.md
@@ -19,3 +19,4 @@
 1) 전역 스코프 (Global scope) : 스크립트 전체에서 참조 되는 것 (어느 곳에서든 참조 가능)
 
 2) 지역 스코프 (Local scope) : 정의된 함수 내에서만 참조되는 것 (지역 밖에서는 참조 되지 않음)
+3) ![image](https://user-images.githubusercontent.com/83463918/162764120-87df1d4f-7c9c-43d7-ae7c-cc052f8a3e37.png)
