--- a/클로져와스코프.md
+++ b/클로져와스코프.md
@@ -28,3 +28,4 @@
 현재 코드의 구조는 전역 안의 외부함수 안의 중첩함수의 형태로 이루어져 있다. 
 
 함수가 중첩이 되면 각각의 함수의 지역스코프 또한 중첩이 될 수 있는데, 이는 스코프가 함수의 중첩에 의해 계층적인 구조를 가질 수 있다는 것을 의미한다.
+![image](https://user-images.githubusercontent.com/83463918/162764506-a33cdb41-4d1d-437f-963b-b02efa6a7f39.png)
