--- a/클로져와스코프.md
+++ b/클로져와스코프.md
@@ -29,3 +29,24 @@
 
 함수가 중첩이 되면 각각의 함수의 지역스코프 또한 중첩이 될 수 있는데, 이는 스코프가 함수의 중첩에 의해 계층적인 구조를 가질 수 있다는 것을 의미한다.
 ![image](https://user-images.githubusercontent.com/83463918/162764506-a33cdb41-4d1d-437f-963b-b02efa6a7f39.png)
+inner 스코프의 상위는 outer, outer 스코프의 상위는 전역 스코프이다.
+
+이처럼 스코프가 계층적으로 이루어져 있는 것을 스코프 체인이라고 한다.
+
+ 
+
+자바스크립트 엔진이 변수를 참조할 때 스코프체인을 통해 변수를 참조한다.
+
+가장 하위 스코프인 inner 에서 z 라는 변수를 참조하려고 한다.
+
+1) 이때 자바스크립트 엔진은 스코프 체인을 통해 먼저 inner 스코프의 안에서 z라는 변수를 찾게된다. 
+
+2) inner 함수 내에는 z라는 변수가 없기 때문에 상위 스코프인 outer 스코프에서 z라는 변수를 찾게 된다.
+
+3) outer 스코프 내에도 z는 없기 때문에 전역에서 찾게된다.
+
+4) 전역에 또한 z라는 변수는 없기때문에 결국 Error 를 출력하게 된다.
+
+ 
+
+이렇게 스코프 체인을 통해 변수를 참조할 때는 무조건 상위 스코프로만 올라간다.
